# Forensic_failure

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
.mimocode/plans/: 1782447354804-lucky-knight.md  1782489188412-proud-engine.md
app/: config.py  database.py  main.py
app/api/: dashboard.py  eval.py  trace.py
app/models/: eval.py  trace.py
app/services/: eval_runner.py  scoring.py  trace_collector.py
app/services/providers/: base.py  gemini.py  groq.py  mistral.py  openrouter.py  registry.py
app/templates/: 404.html  base.html  dashboard.html  eval_datasets.html  eval_detail.html  eval_run_detail.html  eval_runs.html  trace_detail.html  traces.html
examples/: conftest.py  test_example.py
scripts/: seed_data.py
src/pytest_llm/: __init__.py  assertions.py  cache.py  config.py  judge.py  models.py  plugin.py  reporter.py
tests/: conftest.py  test_assertions.py  test_judge.py
