[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-llm"
version = "0.1.0"
description = "LLM-powered semantic assertions for pytest"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "sentence-transformers>=2.2",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
groq = ["groq>=0.4"]
ollama = ["ollama>=0.1"]

[project.entry-points."pytest11"]
pytest_llm = "pytest_llm.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_llm"]
