[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-llm"
version = "0.1.0"
description = "LLM-powered semantic assertions for pytest"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Sushit", email = "your@email.com"}]
keywords = ["pytest", "llm", "testing", "assertions", "langchain", "langgraph", "ai", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "sentence-transformers>=2.2",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
groq = ["groq>=0.4"]
ollama = ["ollama>=0.1"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/Sushit-prog/pytest-llm"
Repository = "https://github.com/Sushit-prog/pytest-llm"
Issues = "https://github.com/Sushit-prog/pytest-llm/issues"

[project.entry-points."pytest11"]
pytest_llm = "pytest_llm.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_llm"]
